# olmo

./: .gitignore  README.md  deepchem_split.py  olmo-zinc-uspto-pretraining.ipynb  olmo_finetune.py  olmo_finetune_classification.py  olmo_finetune_multi.py  olmo_test.py  olmo_test_debug.py  prepare_data.py  pyproject.toml  requirements.txt  run_experiment.py  setup.py  speedrun.sh  train_uspto.py
chemberta4/: __init__.py  callbacks.py  data.py  deepchem_torch_dataset.py  gpt_tokenizer.py  model.py  prompt_templates.py  trainer.py  utils.py
chemberta4/tasks/: __init__.py  base.py  regression.py
chemberta4/training/: __init__.py  pretrain.py  train_classification.py  train_regression.py
configs/: classification.yaml  instruction.yaml  pretrain.yaml  regression.yaml  tasks.yaml
docs/api_reference/: data.rst  index.rst  model.rst  trainer.rst  training.rst  utils.rst
olmochem/: __init__.py  callbacks.py  data.py  model.py  trainer.py  utils.py
olmochem/tasks/: __init__.py  classification.py  generation.py  regression.py
scripts/: prepare_data.py  pretrain.py  run_experiment.py  train_classification.py  train_instruction.py  train_regression.py
tests/: conftest.py  test_data.py  test_model.py  test_utils.py
tests/data/: test_instruction.py  test_moleculenet.py  test_pretrain.py
tests/model/: test_classification.py  test_regression.py
training/: pretrain.py  train_classification.py  train_instruction.py  train_regression.py
